Replay rollouts and update readme

--- a/notebooks/28_la_action_variance.ipynb
+++ b/notebooks/28_la_action_variance.ipynb
@@ -14,7 +14,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/scratch/ankile/miniconda3/envs/ilgpu/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/data/scratch/ankile/miniconda3/envs/ilgpu/lib/python3.8/site-packages/transformers/utils/hub.py:124: FutureWarning: Using `TRANSFORMERS_CACHE` is deprecated and will be removed in v5 of Transformers. Use `HF_HOME` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -116,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +143,14 @@
      "output_type": "stream",
      "text": [
       "Loading zarr files:   0%|          | 0/1 [00:00<?, ?it/s]\n",
+      "\u001b[A"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "\u001b[A\n",
       "\u001b[A\n",
       "\u001b[A\n",
@@ -189,14 +208,24 @@
       "\u001b[A\n",
       "\u001b[A\n",
       "\u001b[A\n",
-      "Loading zarr files: 100%|██████████| 1/1 [00:06<00:00,  6.47s/it]\n"
+      "\u001b[A\n",
+      "\u001b[A\n",
+      "\u001b[A\n",
+      "\u001b[A\n",
+      "\u001b[A\n",
+      "\u001b[A\n",
+      "\u001b[A\n",
+      "\u001b[A\n",
+      "\u001b[A\n",
+      "Loading zarr files: 100%|██████████| 1/1 [00:33<00:00, 33.56s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading dataset of 50 episodes\n"
+      "Loading dataset of 50 episodes:\n",
+      "  ('one_leg', 'teleop', 'low', 'success'): 50 episodes, 29020\n"
      ]
     }
    ],
