--- a/notebooks/00_master_figures.ipynb
+++ b/notebooks/00_master_figures.ipynb
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1171,73 +1171,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not connected to PVD\n",
-      "+++ Using GPU PhysX\n",
-      "Physics Engine: PhysX\n",
-      "Physics Device: cuda:0\n",
-      "GPU Pipeline: enabled\n",
-      "*** Failed to load '/data/scratch/ankile/furniture-diffusion/assets/furniture/urdf/base_tag.urdf'*** Failed to load '/data/scratch/ankile/furniture-diffusion/assets/furniture/urdf/background.urdf'*** Failed to load '/data/scratch/ankile/furniture-diffusion/assets/furniture/urdf/table.urdf'*** Failed to load '/data/scratch/ankile/furniture-diffusion/assets/furniture/urdf/obstacle_front.urdf'*** Failed to load '/data/scratch/ankile/furniture-diffusion/assets/furniture/urdf/obstacle_side.urdf'*** Failed to load '/data/scratch/ankile/furniture-diffusion/assets/franka_description_ros/franka_description/robots/franka_panda.urdf'"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Error] [carb.gym.plugin] Failed to parse URDF file 'furniture/urdf/base_tag.urdf'\n",
-      "[Error] [carb.gym.plugin] Failed to import URDF file 'furniture/urdf/base_tag.urdf'\n",
-      "[Error] [carb.gym.plugin] *** Failed to load 'furniture/urdf/base_tag.urdf' from '/data/scratch/ankile/furniture-diffusion/assets'\n",
-      "[Error] [carb.gym.plugin] Failed to parse URDF file 'furniture/urdf/background.urdf'\n",
-      "[Error] [carb.gym.plugin] Failed to import URDF file 'furniture/urdf/background.urdf'\n",
-      "[Error] [carb.gym.plugin] *** Failed to load 'furniture/urdf/background.urdf' from '/data/scratch/ankile/furniture-diffusion/assets'\n",
-      "[Error] [carb.gym.plugin] Failed to parse URDF file 'furniture/urdf/table.urdf'\n",
-      "[Error] [carb.gym.plugin] Failed to import URDF file 'furniture/urdf/table.urdf'\n",
-      "[Error] [carb.gym.plugin] *** Failed to load 'furniture/urdf/table.urdf' from '/data/scratch/ankile/furniture-diffusion/assets'\n",
-      "[Error] [carb.gym.plugin] Failed to parse URDF file 'furniture/urdf/obstacle_front.urdf'\n",
-      "[Error] [carb.gym.plugin] Failed to import URDF file 'furniture/urdf/obstacle_front.urdf'\n",
-      "[Error] [carb.gym.plugin] *** Failed to load 'furniture/urdf/obstacle_front.urdf' from '/data/scratch/ankile/furniture-diffusion/assets'\n",
-      "[Error] [carb.gym.plugin] Failed to parse URDF file 'furniture/urdf/obstacle_side.urdf'\n",
-      "[Error] [carb.gym.plugin] Failed to import URDF file 'furniture/urdf/obstacle_side.urdf'\n",
-      "[Error] [carb.gym.plugin] *** Failed to load 'furniture/urdf/obstacle_side.urdf' from '/data/scratch/ankile/furniture-diffusion/assets'\n",
-      "[Error] [carb.gym.plugin] Failed to parse URDF file 'franka_description_ros/franka_description/robots/franka_panda.urdf'\n",
-      "[Error] [carb.gym.plugin] Failed to import URDF file 'franka_description_ros/franka_description/robots/franka_panda.urdf'\n",
-      "[Error] [carb.gym.plugin] *** Failed to load 'franka_description_ros/franka_description/robots/franka_panda.urdf' from '/data/scratch/ankile/furniture-diffusion/assets'\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'k_ee_link'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m env \u001b[38;5;241m=\u001b[39m \u001b[43mget_env\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgpu_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfurniture\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mchair\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnum_envs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mrandomness\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlow\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mresize_img\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mapril_tags\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/data/scratch/ankile/furniture-diffusion/src/gym/__init__.py:32\u001b[0m, in \u001b[0;36mget_env\u001b[0;34m(gpu_id, furniture, num_envs, randomness, max_env_steps, resize_img, act_rot_repr, ctrl_mode, action_type, april_tags, verbose, headless)\u001b[0m\n\u001b[1;32m     28\u001b[0m     furniture_sim_env\u001b[38;5;241m.\u001b[39mASSET_ROOT \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(\n\u001b[1;32m     29\u001b[0m         Path(\u001b[38;5;18m__file__\u001b[39m)\u001b[38;5;241m.\u001b[39mparent\u001b[38;5;241m.\u001b[39mparent\u001b[38;5;241m.\u001b[39mparent\u001b[38;5;241m.\u001b[39mabsolute() \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124massets\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     30\u001b[0m     )\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m suppress_all_output(\u001b[38;5;129;01mnot\u001b[39;00m verbose):\n\u001b[0;32m---> 32\u001b[0m     env \u001b[38;5;241m=\u001b[39m \u001b[43mgym\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmake\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     33\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mFurnitureSim-v0\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     34\u001b[0m \u001b[43m        \u001b[49m\u001b[43mfurniture\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfurniture\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Specifies the type of furniture [lamp | square_table | desk | drawer | cabinet | round_table | stool | chair | one_leg].\u001b[39;49;00m\n\u001b[1;32m     35\u001b[0m \u001b[43m        \u001b[49m\u001b[43mnum_envs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_envs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Number of parallel environments.\u001b[39;49;00m\n\u001b[1;32m     36\u001b[0m \u001b[43m        \u001b[49m\u001b[43mresize_img\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mresize_img\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# If true, images are resized to 224 x 224.\u001b[39;49;00m\n\u001b[1;32m     37\u001b[0m \u001b[43m        \u001b[49m\u001b[43mconcat_robot_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# If true, robot state is concatenated to the observation.\u001b[39;49;00m\n\u001b[1;32m     38\u001b[0m \u001b[43m        \u001b[49m\u001b[43mheadless\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mheadless\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# If true, simulation runs without GUI.\u001b[39;49;00m\n\u001b[1;32m     39\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;66;43;03m# Includes the parts poses in the observation for resetting\u001b[39;49;00m\n\u001b[1;32m     40\u001b[0m \u001b[43m        \u001b[49m\u001b[43mobs_keys\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mDEFAULT_VISUAL_OBS\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mparts_poses\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     41\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcompute_device_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgpu_id\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     42\u001b[0m \u001b[43m        \u001b[49m\u001b[43mgraphics_device_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgpu_id\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     43\u001b[0m \u001b[43m        \u001b[49m\u001b[43minit_assembled\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# If true, the environment is initialized with assembled furniture.\u001b[39;49;00m\n\u001b[1;32m     44\u001b[0m \u001b[43m        \u001b[49m\u001b[43mnp_step_out\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# If true, env.step() returns Numpy arrays.\u001b[39;49;00m\n\u001b[1;32m     45\u001b[0m \u001b[43m        \u001b[49m\u001b[43mchannel_first\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# If true, images are returned in channel first format.\u001b[39;49;00m\n\u001b[1;32m     46\u001b[0m \u001b[43m        \u001b[49m\u001b[43mrandomness\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrandomness\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Level of randomness in the environment [low | med | high].\u001b[39;49;00m\n\u001b[1;32m     47\u001b[0m \u001b[43m        \u001b[49m\u001b[43mhigh_random_idx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Index of the high randomness level (range: [0-2]). Default -1 will randomly select the index within the range.\u001b[39;49;00m\n\u001b[1;32m     48\u001b[0m \u001b[43m        \u001b[49m\u001b[43msave_camera_input\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# If true, the initial camera inputs are saved.\u001b[39;49;00m\n\u001b[1;32m     49\u001b[0m \u001b[43m        \u001b[49m\u001b[43mrecord\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# If true, videos of the wrist and front cameras' RGB inputs are recorded.\u001b[39;49;00m\n\u001b[1;32m     50\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmax_env_steps\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmax_env_steps\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Maximum number of steps per episode.\u001b[39;49;00m\n\u001b[1;32m     51\u001b[0m \u001b[43m        \u001b[49m\u001b[43mact_rot_repr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mact_rot_repr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Representation of rotation for action space. Options are 'quat' and 'axis'.\u001b[39;49;00m\n\u001b[1;32m     52\u001b[0m \u001b[43m        \u001b[49m\u001b[43mctrl_mode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mctrl_mode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Control mode for the robot. Options are 'osc' and 'diffik'.\u001b[39;49;00m\n\u001b[1;32m     53\u001b[0m \u001b[43m        \u001b[49m\u001b[43maction_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maction_type\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Action type for the robot. Options are 'delta' and 'pos'.\u001b[39;49;00m\n\u001b[1;32m     54\u001b[0m \u001b[43m        \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mverbose\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# If true, prints debug information.\u001b[39;49;00m\n\u001b[1;32m     55\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m env\n",
-      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/ilgpu/lib/python3.8/site-packages/gym/envs/registration.py:235\u001b[0m, in \u001b[0;36mmake\u001b[0;34m(id, **kwargs)\u001b[0m\n\u001b[1;32m    234\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmake\u001b[39m(\u001b[38;5;28mid\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m--> 235\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mregistry\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmake\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mid\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/ilgpu/lib/python3.8/site-packages/gym/envs/registration.py:129\u001b[0m, in \u001b[0;36mEnvRegistry.make\u001b[0;34m(self, path, **kwargs)\u001b[0m\n\u001b[1;32m    127\u001b[0m     logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMaking new env: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, path)\n\u001b[1;32m    128\u001b[0m spec \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mspec(path)\n\u001b[0;32m--> 129\u001b[0m env \u001b[38;5;241m=\u001b[39m \u001b[43mspec\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmake\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    130\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m env\n",
-      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/ilgpu/lib/python3.8/site-packages/gym/envs/registration.py:90\u001b[0m, in \u001b[0;36mEnvSpec.make\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     89\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m load(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mentry_point)\n\u001b[0;32m---> 90\u001b[0m     env \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m_kwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     92\u001b[0m \u001b[38;5;66;03m# Make the environment aware of which spec it came from.\u001b[39;00m\n\u001b[1;32m     93\u001b[0m spec \u001b[38;5;241m=\u001b[39m copy\u001b[38;5;241m.\u001b[39mdeepcopy(\u001b[38;5;28mself\u001b[39m)\n",
-      "File \u001b[0;32m/data/scratch/ankile/furniture-bench/furniture_bench/envs/furniture_sim_env.py:166\u001b[0m, in \u001b[0;36mFurnitureSimEnv.__init__\u001b[0;34m(self, furniture, num_envs, resize_img, obs_keys, concat_robot_state, manual_label, manual_done, headless, compute_device_id, graphics_device_id, init_assembled, np_step_out, channel_first, randomness, high_random_idx, save_camera_input, record, max_env_steps, act_rot_repr, action_type, ctrl_mode, ee_laser, **kwargs)\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_setup_lights()\n\u001b[1;32m    165\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimport_assets()\n\u001b[0;32m--> 166\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreate_envs\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    167\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mset_viewer()\n\u001b[1;32m    168\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mset_camera()\n",
-      "File \u001b[0;32m/data/scratch/ankile/furniture-bench/furniture_bench/envs/furniture_sim_env.py:246\u001b[0m, in \u001b[0;36mFurnitureSimEnv.create_envs\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    243\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbase_tag_from_robot_mat \u001b[38;5;241m=\u001b[39m config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrobot\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtag_base_from_robot_base\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    245\u001b[0m franka_link_dict \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39misaac_gym\u001b[38;5;241m.\u001b[39mget_asset_rigid_body_dict(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfranka_asset)\n\u001b[0;32m--> 246\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfranka_ee_index \u001b[38;5;241m=\u001b[39m \u001b[43mfranka_link_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mk_ee_link\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m    247\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfranka_base_index \u001b[38;5;241m=\u001b[39m franka_link_dict[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpanda_link0\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    248\u001b[0m \u001b[38;5;66;03m# Parts assets.\u001b[39;00m\n\u001b[1;32m    249\u001b[0m \u001b[38;5;66;03m# Create assets.\u001b[39;00m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'k_ee_link'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env = get_env(\n",
     "    gpu_id=0,\n",
-    "    furniture=\"chair\",\n",
+    "    furniture=\"one_leg\",\n",
     "    num_envs=1,\n",
     "    randomness=\"low\",\n",
     "    resize_img=False,\n",
     "    april_tags=False,\n",
-    "    verbose=True,\n",
+    "    verbose=False,\n",
+    "    headless=False,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Found collision-free init pose\n"
+     ]
+    }
+   ],
+   "source": [
+    "env.reset()\n",
+    "\n",
+    "# Perform random actions\n",
+    "for _ in range(10):\n",
+    "    action = torch.rand(8) * 2 - 1\n",
+    "    env.step(action.cuda())"
    ]
   },
   {
