--- a/notebooks/00_master_figures.ipynb
+++ b/notebooks/00_master_figures.ipynb
@@ -24,140 +24,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Main results grouped bar chart"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "# Data\n",
-    "tasks = [\"Square table\", \"Round table\", \"Lamp\", \"Stool\", \"Chair\"]\n",
-    "methods = [\"BC\", \"Collect-and-Infer\", \"Trajectory Augmentation\", \"Negative guidance\"]\n",
-    "# Generating random data for the methods within each task\n",
-    "data = np.random.randint(0, 100, size=(len(tasks), len(methods)))\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(10, 5))\n",
-    "\n",
-    "# Set position of bar on X axis\n",
-    "barWidth = 0.2\n",
-    "r1 = np.arange(len(data))\n",
-    "r2 = [x + barWidth for x in r1]\n",
-    "r3 = [x + barWidth for x in r2]\n",
-    "r4 = [x + barWidth for x in r3]\n",
-    "\n",
-    "# Make the plot\n",
-    "ax.bar(\n",
-    "    r1,\n",
-    "    data[:, 0],\n",
-    "    width=barWidth,\n",
-    "    edgecolor=\"grey\",\n",
-    "    label=\"BC\",\n",
-    ")\n",
-    "ax.bar(\n",
-    "    r2,\n",
-    "    data[:, 1],\n",
-    "    width=barWidth,\n",
-    "    edgecolor=\"grey\",\n",
-    "    label=\"Collect-and-Infer\",\n",
-    ")\n",
-    "ax.bar(\n",
-    "    r3,\n",
-    "    data[:, 2],\n",
-    "    width=barWidth,\n",
-    "    edgecolor=\"grey\",\n",
-    "    label=\"Trajectory Augmentation\",\n",
-    ")\n",
-    "ax.bar(\n",
-    "    r4,\n",
-    "    data[:, 3],\n",
-    "    width=barWidth,\n",
-    "    edgecolor=\"grey\",\n",
-    "    label=\"Negative guidance\",\n",
-    ")\n",
-    "\n",
-    "# Add xticks on the middle of the group bars\n",
-    "ax.set_xlabel(\"Tasks\", fontweight=\"bold\")\n",
-    "ax.set_xticks([r + barWidth for r in range(len(data))])\n",
-    "ax.set_xticklabels(tasks)\n",
-    "ax.set_ylabel(\"Success rate (%)\")\n",
-    "ax.set_ylim(0, 100)\n",
-    "\n",
-    "# Adding the \"Placeholder\" label\n",
-    "plt.text(\n",
-    "    0.5,\n",
-    "    0.5,\n",
-    "    \"Placeholder\",\n",
-    "    horizontalalignment=\"center\",\n",
-    "    verticalalignment=\"center\",\n",
-    "    transform=ax.transAxes,\n",
-    "    color=\"red\",\n",
-    "    fontsize=48,\n",
-    "    alpha=0.75,\n",
-    ")\n",
-    "\n",
-    "\n",
-    "# Create legend & Show graphic\n",
-    "ax.legend()\n",
-    "plt.xticks(rotation=45)\n",
-    "plt.title(\"Success rate of the methods for each task\")\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(fig_base / \"success_rate.pdf\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Compare pretraining vision encoder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Data\n",
-    "categories = {\n",
-    "    \"RN18, Scratch\": 49,\n",
-    "    \"RN18, ImageNet\": 59,\n",
-    "    \"Category 3\": 30,\n",
-    "}\n",
-    "\n",
-    "# Define the color palette with reduced alpha value\n",
-    "colors = [\"#FF6666\", \"#FF3333\", \"#FF0000\"]\n",
-    "\n",
-    "# Create figure and axis\n",
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "# Create bar chart with custom colors\n",
-    "ax.bar(categories.keys(), categories.values(), color=colors, alpha=0.75)\n",
-    "\n",
-    "# Set y-axis to display percentages\n",
-    "ax.yaxis.set_major_formatter(\"{x:.0f}%\")\n",
-    "\n",
-    "# Add labels and title\n",
-    "ax.set_xlabel(\"Categories\")\n",
-    "ax.set_ylabel(\"Percentage\")\n",
-    "ax.set_title(\"Bar Chart with Percentages\")\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Analyze the `round_table` augmentation"
    ]
   },
@@ -861,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,94 +808,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/4 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found the following paths:\n",
-      "    /data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/square_table/rollout/low/success/*.pkl*\n",
-      "Rendering /data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/square_table/rollout/low/success/2024-03-28T16:52:10.pkl\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2239/2239 [00:00<00:00, 27641.86it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File saved as tmp/rollout_square_table_success_0.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp/rollout_square_table_success_0.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rendering /data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/square_table/rollout/low/success/2024-03-19T07:59:07.pkl\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2379/2379 [00:00<00:00, 27420.76it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File saved as tmp/rollout_square_table_success_1.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp/rollout_square_table_success_1.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4/4 [06:21<00:00, 95.32s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "render_rollout_video(demo_outcome=\"success\", task_subset=[\"square_table\"], n_videos=2)"
+    "render_rollout_video(demo_outcome=\"success\", task_subset=[\"round_table\"], n_videos=1)"
    ]
   },
   {
@@ -1041,61 +824,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/4 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found the following paths:\n",
-      "    /data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/rollout/low/failure/*.pkl*\n",
-      "Rendering /data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/rollout/low/failure/2024-03-28T17:15:19.pkl\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2001/2001 [00:00<00:00, 26007.02it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File saved as tmp/rollout_round_table_failure_0.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp/rollout_round_table_failure_0.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rendering /data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/rollout/low/failure/2024-03-28T17:12:59.pkl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "render_rollout_video(demo_outcome=\"failure\", task_subset=[\"round_table\"], n_videos=6)"
+    "render_rollout_video(demo_outcome=\"failure\", task_subset=[\"one_leg\"], n_videos=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Render with egocentric view as well"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths = get_raw_paths(\n",
+    "    environment=\"sim\",\n",
+    "    demo_source=\"rollout\",\n",
+    "    demo_outcome=\"success\",\n",
+    "    task=\"round_table\",\n",
+    "    randomness=\"low\",\n",
+    ")\n",
+    "\n",
+    "fps = 20\n",
+    "n_videos = 1\n",
+    "\n",
+    "path = sorted(paths, reverse=True)[0]\n",
+    "\n",
+    "print(f\"Rendering {path}\")\n",
+    "imgs = []\n",
+    "for obs in tqdm(unpickle_data(path)[\"observations\"]):\n",
+    "\n",
+    "    img1 = obs[\"color_image1\"]\n",
+    "    img2 = obs[\"color_image2\"]\n",
+    "\n",
+    "    img = np.concatenate([img1, img2], axis=1)\n",
+    "\n",
+    "    robot_state = obs[\"robot_state\"]\n",
+    "    robot_state = [\n",
+    "        round(val, 2) for val in robot_state\n",
+    "    ]  # Limit to 2 numbers after the dot\n",
+    "\n",
+    "    # Add black pixels at the top of the image for camera view titles\n",
+    "    title_bar_height = 60\n",
+    "    title_bar = np.zeros((title_bar_height, img.shape[1], 3), dtype=np.uint8)\n",
+    "    img_with_title_bar = np.vstack((title_bar, img))\n",
+    "\n",
+    "    # Add titles for the camera views\n",
+    "    img_with_titles = cv2.putText(\n",
+    "        img_with_title_bar,\n",
+    "        \"Wrist camera view\",\n",
+    "        (10, 40),  # Position of the text\n",
+    "        cv2.FONT_HERSHEY_SIMPLEX,  # Font type\n",
+    "        1.5,  # Font scale (increased to match the \"Proprioceptive state\" title)\n",
+    "        (255, 255, 255),  # Text color (white)\n",
+    "        2,  # Text thickness\n",
+    "        cv2.LINE_AA,  # Line type for better rendering\n",
+    "    )\n",
+    "    img_with_titles = cv2.putText(\n",
+    "        img_with_titles,\n",
+    "        \"Front camera view\",\n",
+    "        (img1.shape[1] + 10, 40),  # Position of the text\n",
+    "        cv2.FONT_HERSHEY_SIMPLEX,  # Font type\n",
+    "        1.5,  # Font scale (increased to match the \"Proprioceptive state\" title)\n",
+    "        (255, 255, 255),  # Text color (white)\n",
+    "        2,  # Text thickness\n",
+    "        cv2.LINE_AA,  # Line type for better rendering\n",
+    "    )\n",
+    "\n",
+    "    # Add black pixels at the bottom of the image\n",
+    "    black_bar_height = 100\n",
+    "    black_bar = np.zeros(\n",
+    "        (black_bar_height, img_with_titles.shape[1], 3), dtype=np.uint8\n",
+    "    )\n",
+    "    img_with_bar = np.vstack((img_with_titles, black_bar))\n",
+    "\n",
+    "    # Add the \"Proprioceptive state\" text above the robot_state numbers\n",
+    "    img_with_text = cv2.putText(\n",
+    "        img_with_bar,\n",
+    "        \"Proprioceptive state\",\n",
+    "        (10, img_with_bar.shape[0] - 60),  # Position of the text\n",
+    "        cv2.FONT_HERSHEY_SIMPLEX,  # Font type\n",
+    "        1.5,  # Font scale\n",
+    "        (255, 255, 255),  # Text color (white)\n",
+    "        2,  # Text thickness\n",
+    "        cv2.LINE_AA,  # Line type for better rendering\n",
+    "    )\n",
+    "\n",
+    "    # Format robot_state with consistent spacing\n",
+    "    robot_state_text = (\n",
+    "        \"[\" + \", \".join([\"{:6.2f}\".format(val) for val in robot_state]) + \"]\"\n",
+    "    )\n",
+    "    img_with_text = cv2.putText(\n",
+    "        img_with_text,\n",
+    "        robot_state_text,\n",
+    "        (10, img_with_bar.shape[0] - 20),  # Position of the text\n",
+    "        cv2.FONT_HERSHEY_SIMPLEX,  # Font type\n",
+    "        1,  # Font scale\n",
+    "        (255, 255, 255),  # Text color (white)\n",
+    "        2,  # Text thickness\n",
+    "        cv2.LINE_AA,  # Line type for better rendering\n",
+    "    )\n",
+    "\n",
+    "    # Add the \"2x\" text overlay in the lower-right corner\n",
+    "    img_with_text = cv2.putText(\n",
+    "        img_with_text,\n",
+    "        f\"{fps//10}x\",\n",
+    "        (\n",
+    "            img_with_text.shape[1] - 100,\n",
+    "            img_with_text.shape[0] - 40,\n",
+    "        ),  # Adjusted position of the text\n",
+    "        cv2.FONT_HERSHEY_SIMPLEX,  # Font type\n",
+    "        2,  # Font scale (doubled)\n",
+    "        (255, 255, 255),  # Text color (white)\n",
+    "        4,  # Text thickness (doubled)\n",
+    "        cv2.LINE_AA,  # Line type for better rendering\n",
+    "    )\n",
+    "\n",
+    "    imgs.append(img_with_text)\n",
+    "\n",
+    "imgs = np.array(imgs)\n",
+    "create_mp4_jupyter(imgs, base_dir / f\"rollout_round_table_wrist.mp4\", fps=fps)"
    ]
   },
   {
@@ -1107,45 +962,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Importing module 'gym_38' (/data/scratch/ankile/isaacgym/python/isaacgym/_bindings/linux-x86_64/gym_38.so)\n",
-      "Setting GYM_USD_PLUG_INFO_PATH to /data/scratch/ankile/isaacgym/python/isaacgym/_bindings/linux-x86_64/usd/plugInfo.json\n",
-      "PyTorch version 2.2.1+cu121\n",
-      "Device count 1\n",
-      "/data/scratch/ankile/isaacgym/python/isaacgym/_bindings/src/gymtorch\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using /data/scratch/ankile/.cache as PyTorch extensions root...\n",
-      "Emitting ninja build file /data/scratch/ankile/.cache/gymtorch/build.ninja...\n",
-      "Building extension module gymtorch...\n",
-      "Allowing ninja to set a default number of workers... (overridable by setting the environment variable MAX_JOBS=N)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ninja: no work to do.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading extension module gymtorch...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.gym import get_env\n",
     "\n",
@@ -1171,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,17 +1008,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Found collision-free init pose\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env.reset()\n",
     "\n",
