Add first draft of installation instructions

--- a/notebooks/00_master_figures.ipynb
+++ b/notebooks/00_master_figures.ipynb
@@ -812,7 +812,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "render_rollout_video(demo_outcome=\"success\", task_subset=[\"round_table\"], n_videos=1)"
+    "render_rollout_video(demo_outcome=\"success\", task_subset=[\"lamp\"], n_videos=1)"
    ]
   },
   {
